# rene-drmingw

./: .hgignore  CMakeLists.txt
cmake/: Toolchain-mingw32_new.cmake  sources.list
